# modelex

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
custom_data/: __init__.py  chatlogs.py  custom_ft_dataset.py  parquet.py  prompt_format.py
data_module/: chatlogs.py  collate_fn.py  custom_ft_dataset.py  parquet.py  prompt_format.py
modelex/: __init__.py
modelex/data/: __init__.py  chatlogs.py  collate_fn.py  custom_ft_dataset.py  hdf5.py  parquet.py  prompt_format.py  random_data.py
modelex/datasets/: __init__.py  chatlogs.py  collate_fn.py  custom_ft_dataset.py  hdf5.py  numpyfile.py  parquet.py  prompt_format.py
modelex/examples/: trainer_config.yaml
modelex/generation/: __init__.py  generation_handler.py
modelex/inference/: conversation.py  engine.py  loader.py  parser.py  structs.py
modelex/models/: __init__.py  base.py  config_utils.py  gguf_model.py  model_utils.py  registry.py
modelex/models/granite/: __init__.py  config.py  model.py
modelex/models/llm/: __init__.py  config.py  llm.py  llm_train.py  model.py
modelex/modules/: __init__.py  attention.py  linears.py  mlp.py  rotary_embedding.py  tied_linear.py  transformer_block.py
modelex/scripts/: benchmark.py  chat.py  generate.py  prepare_dataset.py  prompt.py  serve.py  train.py
modelex/tokenization/: utils.py
modelex/tokenizers/: byte_tokenizer.py
modelex/training/: __init__.py  trainer.py  trainer_config.py
modelex/utils/: __init__.py  benchmark.py  conversation_format.py  convert_hf_keys.py  diskcache.py  generation_utils.py  kv_cache.py  load.py  peft_utils.py  safetensor_utils.py
models/: __init__.py  config.py  generation_handler.py  gguf_logits.py  inference_model.py  llm.py  llm_generation_handler.py  llm_inference.py  trainer.py  training_model.py
models/layers/: attention.py  mlp.py  rotary_embedding.py  transformer_block.py
scripts/: benchmark.py  generate.py  prepare_datasets.py  prepare_distillation_data.py  prompt.py  prompt_server.py  train.py
utils/: __init__.py  diskcache.py  prompt_format.py
