[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelex"
version = "0.2"
requires-python = ">=3.11"
authors = [
    { name = "Andrew Santhosh" },
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "safetensors>=0.6.2",
    "tensorboard>=2.20.0",
    "tokenizers>=0.22.0",
    "torch>=2.8.0",
    "torchao>=0.12.0",
    "torchtune>=0.6.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
#dependencies = [
#    "numpy",
#    "pyarrow",
#]
#benchmark = ["seaborn", "matplotlib", "tabulate"]

[project.urls]
Repository = "https://github.com/andrew264/modelex.git"

[project.scripts]
modelex = "modelex:main"

[project.optional-dependencies]
serve = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]
cce = [
    "cut-cross-entropy",
]

[dependency-groups]
lint = [
    "ruff>=0.12.11",
]

[tool.ruff]
line-length=180

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-line-length = "dynamic"

[tool.uv.sources]
cut-cross-entropy = { git = "https://github.com/apple/ml-cross-entropy.git" }
