[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "modelex"
version = "0.2"
requires-python = ">=3.11"
authors = [
    { name = "Andrew Santhosh" },
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2.11.9",
    "safetensors>=0.6.2",
    "tokenizers>=0.22.1",
    "torch>=2.8.0",
    "torchao>=0.13.0",
    "torchtune>=0.6.1",
    "tqdm>=4.67.1",
]
#dependencies = [
#    "numpy",
#    "pyarrow",
#]
#benchmark = ["seaborn", "matplotlib", "tabulate"]

[project.urls]
Repository = "https://github.com/andrew264/modelex.git"

[project.scripts]
modelex = "modelex:main"

[dependency-groups]
serve = [
    "fastapi>=0.117.1",
    "uvicorn>=0.37.0",
]
lint = [
    "ruff>=0.13.2",
]
training = [
    "bitsandbytes>=0.47.0",
    "tensorboard>=2.20.0",
    "cut-cross-entropy",
]
datareaders = [
    "h5py>=3.14.0",
]

[tool.ruff]
line-length=180

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-line-length = "dynamic"

[tool.uv.sources]
cut-cross-entropy = { git = "https://github.com/apple/ml-cross-entropy.git" }
